--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "yusufbestas",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,26 @@
   "bugs": {
     "url": "https://github.com/karaelf33/website/issues"
   },
-  "homepage": "https://github.com/karaelf33/website#readme"
+  "homepage": "https://github.com/karaelf33/website#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-minify": "^3.1.0",
+    "gulp-uglify": "^3.0.1"
+  },
+  "dependencies": {
+    "del": "^3.0.0",
+    "font-awesome": "^4.7.0",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.6.1",
+    "gulp-contrib-copy": "^0.1.3",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-open": "^3.0.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-twig": "^0.7.0"
+  }
 }
