--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "gulp-uglify": "^3.0.1"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0",
     "del": "^3.0.0",
-    "font-awesome": "^4.7.0",
     "gulp": "^3.9.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
